--- a/week2/Blog_Props/public/index.html
+++ b/week2/Blog_Props/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="stylesBlog.css">
     </head>
     <body>
         <div id="root"></div>
